--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 20px;
     line-height: 1.5;
     color: green;
-   
+    background-image: url("../img/artage-io-thumb-11f0159309a171adda68a89ebf68323e.png");
 }
 .title {
     font-family: Georgia;
@@ -52,13 +52,17 @@ body {
     margin-left: auto;
     margin-right: auto;
     border: 1px solid yellow;
-    background-color: peru;
+    background-image: url("../img/_DSC4771.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+
 }
 .post-title {
     margin: 0;
-    color: palegreen;
+    color: white;
 
 }
 .post-text p {
     margin: 0 0 10px 0;
+    color: white;
 }
