--- a/CSS/style.css
+++ b/CSS/style.css
@@ -66,3 +66,10 @@ body {
     margin: 0 0 10px 0;
     color: white;
 }
+/* Градиент */
+.gradient {
+    width: 600px;
+    height: 300px;
+    background-color: mediumseagreen;
+    background-image: linear-gradient(white, aqua);
+}
