--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,3 +73,27 @@ body {
     background-color: mediumseagreen;
     background-image: linear-gradient(white, aqua);
 }
+/*формы*/
+.form {
+    width: 500px;
+    padding: 20px;
+    margin: auto;
+    background-color: wheat;
+}
+.form-group{
+    margin-bottom: 10px;
+}
+.form-input{
+    padding: 10px;
+    border: 1px solid brown;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    display: block;
+}
+.form-text-area {
+  width:200px;
+  height: 150;
+  padding: 5px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
