--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,3 +97,25 @@ body {
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.link {
+    color: black;
+    text-decoration: none;
+}
+.link:hover {
+    text-decoration: underline;
+}
+.button {
+    background-color: greenyellow;
+    border: 1px solid;
+    color:rgb(51, 41, 24);
+    padding: 5px 10px;
+    color: black;
+}
+.btn:visited{
+ background-color: brown;
+}
+.btn:hover{
+    background-color: chocolate;
+    cursor: pointer;
+}
