--- a/CSS/style.css
+++ b/CSS/style.css
@@ -96,6 +96,7 @@ body {
   padding: 5px;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  outline: 1px solid red;
 }
 
 .link {
@@ -118,4 +119,13 @@ body {
 .btn:hover{
     background-color: chocolate;
     cursor: pointer;
+}
+
+.form-fieldset {
+    border: 1px solid black;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.form-title {
+    margin:0 0 15px;
 }
